# imara-diff

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plt.py
.github/workflows/: ci.yml
benches/: git_repo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: comprehensive_diff.rs  diff_compute_with.rs  postprocess_heuristics.rs  unified_diff_printer.rs
plots/: linux_comparison.svg.base64  linux_speedup.svg.base64
src/: git_diff.rs  histogram.rs  intern.rs  lib.rs  myers.rs  postprocess.rs  sink.rs  slider_heuristic.rs  sources.rs  tests.rs  unified_diff.rs  util.rs
src/histogram/: lcs.rs  list_pool.rs
src/myers/: middle_snake.rs  preprocess.rs  slice.rs
tests/: helix_syntax.rs.Histogram.diff  helix_syntax.rs.Histogram_ctx5.diff  helix_syntax.rs.Myers.diff  helix_syntax.rs.Myers_ctx5.diff  sliders.rs
tests/fixtures/: make_git_diffs.sh
tests/integration/: main.rs
